test/runtime/fail/closure/missing_arg.hy

// expect error: Expected identifier in function declaration arguments, found `\)`

let a = fn(hello, ) {
	// ...
}
